<resources
	xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation" >

	<string name="app_name">Night Screen</string>

	<string name="permission_control_blackbulb_label">Control Night Screen</string>
	<string name="permission_control_blackbulb_desc">get the status of Night Screen and control it</string>

	<!-- Button tip -->
	<string name="button_tip_text">Tip: Click the top left button to turn on Night Screen.</string>

    <!-- Yellow filter row -->
    <string name="yellow_filter">Yellow filter</string>
	<string name="yellow_filter_explanation">Slide to the right to make the overlay yellow instead of grey</string>

	<!-- Scheduler Row -->
	<string name="scheduler_status_on_show_enable_time">Dimming will be automatically enabled at %s.</string>
	<string name="scheduler_status_on_show_disable_time">Dimming will end at %s.</string>
	<string name="scheduler_status_off">OFF</string>

	<!-- Dark theme Row -->
	<string name="action_dark_theme">Dark theme</string>
	<string name="dark_theme_summary">Switch on to make Night Screen dark</string>

	<!-- Advanced Row -->
	<string name="mode_title">Dimming mode</string>
	<string name="dialog_choose_mode">Choose mode</string>

	<string name="mode_text_no_permission">Permissionless</string>
	<string name="mode_text_normal">Normal</string>
	<string name="mode_text_overlay_all">System overlay</string>

	<string name="mode_desc_no_permission">No permission is needed. However, the lock screen, status bar and navigation bar are not dimmed. Note that this doesn\'t work in Android 7.0.</string>
	<string name="mode_desc_normal">Recommended mode. It is stable, although it cannot dim the navigation bar and it prevents users from clicking \"Install\" or \"Allow\" in permission dialogs.</string>
	<string name="mode_desc_overlay_all">Both the status bar and the navigation bar are dimmed. However, the screen may flash in some apps.</string>

	<string name="mode_android_oreo_explanation_dialog_title">Why can\'t I change the mode?</string>
	<string name="mode_android_oreo_explanation_dialog_message">Since Android Oreo (8.0), Android strictly limits the permissions of floating windows. The methods used before are no longer available. Maybe we will support better methods to control brightness in the future.</string>
	<string name="mode_android_oreo_explanation_read_more">Read more</string>
	<string name="mode_android_oreo_explanation_url" translatable="false">https://developer.android.com/about/versions/oreo/android-8.0-changes.html#all-aw</string>

	<!-- More settings row -->
	<string name="more_settings">More settings</string>

	<!-- Notification Channel -->
	<string name="notification_channel_running_status">Running status</string>

	<!-- Shortcut -->
	<string name="shortcut_label_switch">Toggle</string>

	<!-- About -->
	<string name="action_about">About</string>

	<string name="about_author">Author: Paper Airplane Dev - Fung Gwo</string>
	<string name="about_text">"Night Screen can help protect you from the harm of strong light at night.\nSome devices\' lowest brightness is still high so we can make it lower by creating a mask on screen.\n\nIf you want to support this application, you could send some money to my Alipay: fythonx\@gmail.com"</string>
	<string name="about_other">My blog: <a href="http://feng.moe">http://feng.moe</a>\nMy sina weibo: <a href="http://weibo.com/fython">@某烧饼</a>\nPaypal: <a href="https://www.paypal.me/fython">https://www.paypal.me/fython</a>\nLogo Designer: Google+ Youlun Zhai</string>

	<string name="about_donate_alipay">Support author via Alipay</string>

	<string name="dialog_overlay_enable_title">Enable Status Bar Overlay</string>
	<string name="dialog_overlay_enable_message">Enabling this can overlay the status bar at the top of the screen, but it may need a permission on some devices (such as MIUI and Android 6.0). \nIf it doesn\'t work on the first try, please allow Night Screen to show system alert windows.</string>

	<string name="mask_fail_to_start">Failed to start mask. Please check whether the system has denied the permissions.</string>

	<string name="dialog_first_run_title">First run</string>
	<string name="dialog_first_run_message">Can you see this message? If you can, Night Screen is working well.\nIt will automatically stop after 5 seconds if you don\'t press OK.</string>

	<!-- Notification -->
	<string name="notification_running_title">Night Screen is enabled</string>
	<string name="notification_running_msg">Click here to open settings</string>

	<string name="notification_paused_title">Night Screen is paused</string>
	<string name="notification_paused_msg">Click here to open settings or swipe to stop Night Screen</string>

	<string name="notification_action_turn_off">Turn off</string>
	<string name="notification_action_turn_on">Turn on</string>

	<!-- Auto Mode/scheduled dimming -->
	<string name="scheduler_title">Scheduled dimming</string>

	<string name="dialog_ignore_battery_opt_title">Note</string>
	<string name="dialog_ignore_battery_opt_msg">Due to restrictions on apps introduced in Android 6.0, we may not be able to automatically (de-)activate Night Screen on time. A possible solution is to tell Android to ignore battery optimizations for Night Screen. To do so, tap \"Go to settings\" and confirm the dialog that follows.</string>
	<string name="dialog_button_go_to_set">Go to settings</string>

	<!-- More settings -->
	<string name="handle_volume_key_title">Use volume key to adjust brightness</string>
	<string name="handle_volume_key_summary">You can adjust brightness by volume key in Night Screen interface.</string>
	<string name="show_task_title">Show Night Screen in recent tasks</string>
	<string name="show_task_summary">Some version of Android close apps which don\'t show or aren\'t locked in the recent tasks view. If you don\'t have this problem, you don\'t need to enable this option. (Requires an app restart to apply)</string>
	<string name="auto_enable_when_brightness_changed_title">Auto enable when brightness changed</string>

	<string name="category_others">Others</string>
	<string name="telegram_title">Get the latest news &amp; join discussion group</string>
	<string name="telegram_summary">Click here to open Telegram@gwo_apps</string>
	<string name="github_title">GitHub repository</string>
	<string name="github_url" translatable="false">https://github.com/fython/Blackbulb</string>
	<string name="open_source_license">Open source license</string>
	<string name="open_source_license_summary">Night Screen is inseparable from the efforts of these open source projects.</string>

</resources>
