<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<SwitchPreference
		android:key="dark_theme"
		android:title="@string/action_dark_theme"
		android:summary="@string/dark_theme_summary"
		android:defaultValue="false"/>

	<CheckBoxPreference
		android:key="auto_enabled_when_brightness_changed"
		android:title="@string/auto_enable_when_brightness_changed_title"
		android:defaultValue="true"/>

	<CheckBoxPreference
		android:key="handle_volume_key"
		android:title="@string/handle_volume_key_title"
		android:summary="@string/handle_volume_key_summary"
		android:defaultValue="true"/>

	<CheckBoxPreference
		android:key="show_task"
		android:title="@string/show_task_title"
		android:summary="@string/show_task_summary"
		android:defaultValue="false"/>

	<PreferenceCategory android:title="@string/category_others">

		<Preference
			android:key="about"
			android:title="@string/action_about"/>

		<Preference
			android:key="telegram"
			android:title="@string/telegram_title"
			android:summary="@string/telegram_summary"/>

		<Preference
			android:key="github"
			android:title="@string/github_title"
			android:summary="@string/github_url"/>

		<Preference
			android:key="license"
			android:title="@string/open_source_license"
			android:summary="@string/open_source_license_summary"/>

	</PreferenceCategory>

</PreferenceScreen>