<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

	    <ImageView
		    android:layout_width="48dp"
		    android:layout_height="48dp"
		    android:layout_marginLeft="16dp"
		    android:layout_marginRight="16dp"
		    android:src="@mipmap/ic_launcher"
		    android:gravity="center_vertical"
		    tools:ignore="ContentDescription"/>

	    <LinearLayout
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:layout_marginEnd="16dp"
		    android:orientation="vertical"
		    android:layout_gravity="center_vertical">

		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:textAppearance="@android:style/TextAppearance.Material.Subhead"
			    android:text="@string/app_name"/>

		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/about_author"/>

	    </LinearLayout>

    </LinearLayout>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/about_text"
		android:textAppearance="@android:style/TextAppearance.Material"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginRight="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/about_other"
		android:textColorLink="#2f7fff"
		android:autoLink="web"/>

</LinearLayout>